--- a/style.css
+++ b/style.css
@@ -1,101 +1,104 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Comfortaa', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Comfortaa", sans-serif;
 }
-.login{
-    background-image: url("bg.jpeg");
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login {
+  background-image: url("bg.jpeg");
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-form{
-    width: 350px;
-    height: 410px;
-    background: transparent;
-    border: 1px solid #ccc;
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-    text-align: center;
-} 
- form h1{
-    text-align: center;
-    color: #fff;
-    margin: 45px 0;
+form {
+  width: 350px;
+  height: 410px;
+  background: transparent;
+  border: 1px solid #ccc;
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+  text-align: center;
 }
-.email, .password{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    width: 300px;
-    height: 30px;
-    display: flex;
-    padding: 5px;
-    justify-content: center;
-    border: 1px solid #fff;
-    border-radius: 20px;
+form h1 {
+  text-align: center;
+  color: #fff;
+  margin: 45px 0;
 }
-.email-icon, .password-icon{
-    width: 35px;
-    display: grid;
-    place-content: center;
-    padding-right: 10px;
-    color: #fff;
+.email,
+.password {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 30px;
+  display: flex;
+  padding: 5px;
+  justify-content: center;
+  border: 1px solid #fff;
+  border-radius: 20px;
 }
-.email input, .password input{
-    width: 240px;
-    border: none;
-    background: none;
-    outline: none;
-    color: #fff;
+.email-icon,
+.password-icon {
+  width: 35px;
+  display: grid;
+  place-content: center;
+  padding-right: 10px;
+  color: #fff;
 }
-input::placeholder{
-    color: #fff;
+.email input,
+.password input {
+  width: 240px;
+  border: none;
+  background: none;
+  outline: none;
+  color: #fff;
 }
-.section{
-    color: #fff;
-    font-size: 12px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
+input::placeholder {
+  color: #fff;
 }
-.section input{
-    margin-right: 3px;
-    accent-color: #fff;
-    width: 12px;
+.section {
+  color: #fff;
+  font-size: 12px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
 }
-.section a{
-    color: #fff;
-    margin-left: 65px;
-    text-decoration: none;
+.section input {
+  margin-right: 3px;
+  accent-color: #fff;
+  width: 12px;
 }
-.section a:hover{
-    text-decoration: underline;
+.section a {
+  color: #fff;
+  margin-left: 65px;
+  text-decoration: none;
 }
-button{
-    width: 75%;
-    background: #fff;
-    height: 40px;
-    border-radius: 20px;
-    margin-top: 20px;
-    font-weight: 600;
-    border: none;
+.section a:hover {
+  text-decoration: underline;
 }
-.sign{
-    font-size: 14px;
-    margin-top: 25px;
-    color: #fff;
+button {
+  width: 75%;
+  background: #fff;
+  height: 40px;
+  border-radius: 20px;
+  margin-top: 20px;
+  font-weight: 600;
+  border: none;
 }
-.sign a{
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
+.sign {
+  font-size: 14px;
+  margin-top: 25px;
+  color: #fff;
 }
-.sign a:hover{
-    text-decoration: underline;
+.sign a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+}
+.sign a:hover {
+  text-decoration: underline;
 }
